--- a/simple_prompt.ipynb
+++ b/simple_prompt.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "25d57efb-d6fa-4f37-9b6e-40213f10ae27",
    "metadata": {},
    "outputs": [],
@@ -10,12 +10,12 @@
     "from openai import OpenAI\n",
     "from tqdm import tqdm\n",
     "import json\n",
-    "client = OpenAI(api_key = )"
+    "# client = OpenAI(api_key = )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "0e98f01e-bea8-42f4-b594-3e0372f7abbc",
    "metadata": {},
    "outputs": [],
@@ -34,10 +34,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "c6ae861b-8dcd-4da4-b85f-31dd850cc067",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'properties' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m tmp \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m key, value \u001b[38;5;129;01min\u001b[39;00m \u001b[43mproperties\u001b[49m\u001b[38;5;241m.\u001b[39mitems():\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(value, \u001b[38;5;28mlist\u001b[39m):\n\u001b[1;32m      4\u001b[0m         value \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m, \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(value)  \u001b[38;5;66;03m# Convert list to string\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'properties' is not defined"
+     ]
+    }
+   ],
    "source": [
     "tmp = []\n",
     "for key, value in properties.items():\n",
@@ -368,6 +380,79 @@
     "        \n",
     "print(\"Model:%s  Accuracy:%.4f\" %(model, sum(top10_list)/50))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "49db667d-1115-4242-b24f-e86a629a79cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████████████████| 50/50 [17:52<00:00, 21.45s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model:ChemDFM-13B-v1.0  Accuracy:0.1400\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import openai\n",
+    "openai.api_key = \"EMPTY\"\n",
+    "openai.base_url = \"http://localhost:8002/v1/\"\n",
+    "\n",
+    "model = \"ChemDFM-13B-v1.0\"\n",
+    "\n",
+    "top10_list = []\n",
+    "\n",
+    "for gt, properties in tqdm(zip(gt_list, property_list), total=len(gt_list)):\n",
+    "\n",
+    "    tmp = []\n",
+    "    for key, value in properties.items():\n",
+    "        if isinstance(value, list):\n",
+    "            value = \", \".join(value)  # Convert list to string\n",
+    "        tmp.append(f\"{key}: {value}\")\n",
+    "    \n",
+    "    plain_property = \"\\n\".join(tmp)\n",
+    "\n",
+    "    \n",
+    "    with open('simple_prompt.txt', 'r') as f:\n",
+    "        prompt = f.read()\n",
+    "    prompt = prompt.replace('{PROPERTIES}', plain_property)\n",
+    "\n",
+    "    completion = openai.chat.completions.create(\n",
+    "          model=model,\n",
+    "          max_tokens=1000,\n",
+    "          temperature=0,\n",
+    "          messages=[{\"role\": \"user\", \"content\": prompt}])\n",
+    "    if gt in completion.choices[0].message.content:\n",
+    "        top10_list.append(1)\n",
+    "    else:\n",
+    "        top10_list.append(0)\n",
+    "        \n",
+    "print(\"Model:%s  Accuracy:%.4f\" %(model, sum(top10_list)/50))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d46df98-7acf-495d-b8f1-b0561de11396",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
