--- a/simple_prompt.ipynb
+++ b/simple_prompt.ipynb
@@ -36,7 +36,9 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "c6ae861b-8dcd-4da4-b85f-31dd850cc067",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "ename": "NameError",
